2011-08-25 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/styles/pandora.css: Fixes style in notify css element.

2011-08-25 Javier Lanz <javier.lanz@artica.es>

	* godmode/groups/configure_group.php: Removed the non-desired icons

	Fixes: #3397548

2011-08-25  Sergio Martin <sergio.martin@artica.es>

	* include/db/mysql.php: Fixed a bug in the sql_commit
	function to reset the database to autocommit mode

	* include/functions_tags.php: Added a missed sql_begin call
	to the tags creation function

2011-08-25 Javier Lanz <javier.lanz@artica.es>

	* include/functions_config.php: Fixed checking if remote configuration
	directory is not writtable for the console.

	Fixes: #3396471

2011-08-25  Junichi Satoh  <junichi@rworks.jp>

	* godmode/massive/massive_copy_modules.php: Added group recursion
	feature, it allows to search agents in child groups.

2011-08-24  Miguel de Dios  <miguel.dedios@artica.es>
	
	* godmode/agentes/module_manager_editor.php: added javascript alert message
	when the name in field and remote config is different.
	
	Fixes: #3397306

	* godmode/agentes/configurar_agente.php: fixed when copy a module the name
	now is safe input type.

2011-08-24  Sancho Lerena <slerena@artica.es>

	* include/help/en/help_snmp_alert_field1.php: New help page.

	* include/help/en/help_module_definition.php: Fixed odd chars.

	* images/groups_small/g_: Deleted unused icons.
	
	* images/groups_small/transmit.ok.png: Added margins and padding.
	
2011-08-24  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_modules.php: added the call to enterprise function for
	to copy the remote configuration when copy the modules.
	
	Fixes: #3397314

2011-08-24 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/incidents/incident_detail.php: Fixed table width in this 
	view. 

2011-08-24  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/reporting/reporting_builder.preview.php: fixed the include of
	php file.
	
	Fixes: #3396828
