@@ -1,0 +1,128 @@
+Pandora FMS XML Stress
+======================
+
+This is a small script that generates XML data files like the ones sent by
+Pandora FMS agents.
+
+The scripts reads agent names from a text file and generates XML data files for
+each agent according to a configuration file, where modules are defined as
+templates.
+
+Modules are filled with random data. An initial value and the probability of
+the module data changing may be specified.
+
+Run the script like this:
+
+	./pandora_xml_stress <configuration file>
+
+Sample configuration file
+=========================
+
+# Maximum number of threads, by default 10.
+max_threads 10
+
+# File containing a list of agent names (one per line).
+agent_file agent_names.txt
+
+# Directory where XML data files will be placed, by default /tmp.
+temporal /var/spool/pandora/data_in
+
+# Pandora FMS XML Stress log file, logs to stdout by default.
+log_file pandora_xml_stress.log
+
+# XML version, by default 1.0.
+xml_version 1.0
+
+# XML encoding, by default ISO-8859-1.
+encoding ISO-8859-1
+
+# Operating system (shared by all agents), by default Linux.
+os_name Linux
+
+# Operating system version (shared by all agents), by default 2.6.
+os_version 2.6
+
+# Agent interval, by default 300.
+agent_interval 300
+
+# Data file generation start date, by default now.
+time_from 2009-06-01 00:00:00
+
+# Data file generation end date, by default now.
+time_to 2009-06-05 00:00:00
+
+# Get conf from Pandora Server
+get_and_send_conf_from_server 1
+
+# Delay after generating the first data file for each agent to avoid
+# race conditions when auto-creating the agent, by default 2.
+startup_delay 2
+
+# Timezone offset: Difference with the server timezone
+timezone_offset 0
+
+# Timezone offset range (to set a randomnuber of hours of difference with the
+# server so timezone_offset can go from timezone_offset-timezone_offset_range
+# to timezone_offset+timezone_offset_range
+timezone_offset_range 0
+
+# Agent position paramters
+# Those parameters define the center and the zone where the agents will be 
+# randomly located.
+# The base parameters define the central point of the sistem and the radius
+# defines how far from that point the agents will be placed in any direction
+
+# Base latitude reference for all agents
+latitude_base 40.42056
+# Base longitude reference for all agents
+longitude_base -3.708187
+# Base altitude reference for all agents
+altitude_base 0
+# This amount divided by 100 defines how far from each reference coordinate
+# the agents will go
+position_radius 10
+
+# Address of the Tentacle server where XML files will be sent (optional).
+# server_ip 192.168.50.1
+
+# Port of the Tentacle server, by default 41121.
+# server_port 41121
+
+# Module definitions. Similar to pandora_agent.conf.
+
+module_begin
+module_name Module 1 
+module_type generic_data
+module_description A long description.
+module_max 100
+module_min 10
+module_exec type=RANDOM;variation=60;min=20;max=80
+module_end
+
+module_begin
+module_name Module 2
+module_type generic_data
+module_description A long description.
+module_max 80
+module_min 20
+module_exec type=SCATTER;prob=1;avg=40;min=0;max=80
+module_end
+
+
+module_begin
+module_name Module 3
+module_type generic_data
+module_description A long description.
+module_max 80
+module_min 20
+module_exec type=CURVE;min=20;max=80;time_wave_length=3600;time_offset=0
+module_end
+
+module_begin
+module_name Module 4
+module_type generic_data_string
+module_description A long description.
+module_max 100
+module_min 10
+module_exec type=RANDOM;variation=60;min=20;max=80
+module_end
